Completed Category Page Frontend and also Fixed Dark Mode #6

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2335,7 +2335,7 @@
     content: "ï„‘";
   }
   .icon.icon-column:before {
-    content: "ï„’";
+    content: "";
   }
   .icon.icon-comments:before {
     content: "ï„“";
